Clean up old design

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "C_Cpp.errorSquiggles": "Disabled",
     "C_Cpp.default.browse.path": [],
     "editor.bracketPairColorization.enabled": true,
-    "editor.guides.bracketPairs":"active"    
+    "editor.guides.bracketPairs": "active",
+    "editor.columnSelection": true
 }
