--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "C_Cpp.errorSquiggles": "Disabled",
+    "C_Cpp.errorSquiggles": "disabled",
     "C_Cpp.default.browse.path": [],
     "editor.bracketPairColorization.enabled": true,
     "editor.guides.bracketPairs": "active",
