--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "C_Cpp.default.browse.path": [],
     "editor.bracketPairColorization.enabled": true,
     "editor.guides.bracketPairs": "active",
+    "codeium.telemetry": true,
     "editor.columnSelection": true
 }
