--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "codeium.telemetry": true,
     "editor.columnSelection": false,
     "editor.fontFamily": "'Menlo Regular', 'Droid Sans Mono', 'monospace', monospace",
-    "editor.fontSize": 17
+    "editor.fontSize": 17,
+    "C_Cpp.default.compilerPath": "/usr/bin/gcc"
 }
